--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "FootyOnNet",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.13"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
+    "lodash": "~2.4.1"
   }
 }
